# Algorithm-Engineering

./: README.md
ExamWiese/: .gitignore  Cargo.toml  README.md
ExamWiese/src/: main.rs
Exercise01/: .gitignore  README.md  evaluation.md  pom.xml
Exercise01/src/main/java/com/example/: ClassicalMergeSort.java  EMM.java  MakeFile.java
Exercise01/src/test/java/com/example/: ClassicalMergeSortTest.java  EMMTest.java
Exercise02/: README.md  evaluation.md  experiment01.sh  experiment02.sh  pom.xml
Exercise02/src/main/java/com/example/: CMergeSort.java  CQuickSort.java  MakeFile.java  PMergeSort.java  PQuickSort.java  ReadWrite.java
Exercise02/src/test/java/com/example/: CMergeSortTest.java  CQuickSortTest.java  PMergeSortTest.java  PQuickSortTest.java
Exercise04/: .gitignore  Cargo.toml  README.md  evaluation.md
Exercise04/src/: main.rs  new_nearest_neighbor.rs
Exercise05/: .gitignore  Cargo.toml  README.md  evaluation.md
Exercise05/src/: main.rs
