[package]
name = "ExamWiese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
good_lp = { version = "*", features = ["coin_cbc"], default-features = false }
rand = "*"
num_cpus = "1.13.0"


